# bot-mail-proposal

./: .gitignore  README.md  pyproject.toml  schema.json
backend/: .env.example  README.md  conftest.py  pyproject.toml  requirements.txt  requirements_test.txt  run.py  schema.json
backend/credentials/: credentials_destop_app.json  outlook_token.txt
backend/scripts/: generate_crypto_key.py  generate_hash_password_key.py  install.py  setup_gmail.py
backend/src/: main.py  streamlit_app.py  test.py
backend/src/api/v1/: router.py
backend/src/api/v1/auth/: routes.py
backend/src/api/v1/emails/: routes.py
backend/src/api/v1/proposals/: routes.py
backend/src/api/v1/templates/: routes.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/core/: company_info.py  config.py  const.py  logger.py
backend/src/database/: __init__.py  mongodb.py
backend/src/models/: base_model.py  email.py  proposal.py  user.py
backend/src/prompts/: __init__.py  azure_prompts.py  base_prompts.py  openai_prompts.py  prompt_manager.py
backend/src/repositories/: base_repository.py  email_repository.py  proposal_repository.py  sent_email_repository.py  template_repository.py  user_repository.py
backend/src/services/: base_service.py
backend/src/services/authentication/: __init__.py  auth_service.py
backend/src/services/authentication/core/: __init__.py  auth_factory.py  interfaces.py
backend/src/services/authentication/providers/: __init__.py  bcrypt_password_service.py  jwt_auth_service.py  jwt_token_service.py
backend/src/services/gmail/: base_gmail.py  gmail_service.py
backend/src/services/mail/: __init__.py
backend/src/services/mail/core/: __init__.py  interfaces.py  mail_facade.py  mail_factory.py
backend/src/services/mail/filters/: __init__.py  mail_filter.py
backend/src/services/mail/processors/: __init__.py  gmail_processor.py  outlook_processor.py
backend/src/services/mail/providers/: __init__.py  gmail_service.py  outlook_service.py
backend/src/services/model/: __init__.py  azure_service.py  base_model.py  langchain_service.py
backend/src/services/model/core/: __init__.py  interfaces.py  model_facade.py  model_factory.py
backend/src/services/model/providers/: __init__.py  azure_service.py  langchain_service.py
backend/src/services/proposal/: __init__.py  base_proposal.py  proposal_service.py
backend/src/services/proposal/core/: __init__.py  interfaces.py  proposal_facade.py  proposal_factory.py
backend/src/services/proposal/generators/: __init__.py  ai_generator.py
backend/src/services/proposal/renderers/: __init__.py  pdf_renderer.py
backend/src/services/template/: template_service.py
backend/src/utils/: crypto.py  error_handlers.py  file_utils.py  hash.py  password.py  rate_limit.py  validation.py
backend/templates/: basic_template.html  detailed_template.html  technical_template.html
backend/templates/prompts/: proposal_extraction.json  proposal_generation.json
backend/tests/: conftest.py
backend/tests/api/v1/: test_auth.py  test_emails.py  test_proposals.py  test_templates.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/emails/: page.tsx
frontend/app/proposals/: page.tsx
frontend/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx
(+8 files in other folders)
